2013-04-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STApplicationScriptingController.m (scriptingMenu): Hide the
    scripting menu after it has been loaded from its bundle.

2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STApplicationScriptingController.m (-init):
    * Source/STScriptsPanel.m (-init):
    * Source/STTranscript.m (-init):
    Check the result of the super class initializer and assign it to
    self.

    * Source/STScriptsPanel.m (-dealloc): Fix a space leak.

2012-02-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STTranscript.m (-showError:): Fix space leak detected by clang.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STScriptsPanel.m (-selectScript:): Validate Run button of the
    scripts panel.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STApplicationScriptingController.m (-scriptingMenu): Protect
    against GNUstep stubbornly replacing the application's main menu.

    * Source/STScriptsPanel.m (-selectScript:): Handle case where the
    script's description is nil.

2012-01-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Source/STTranscript.h (-window):
    * Source/NSApplication+additions.h (-applicationNameForScripting):
    Declare public methods.
    * Source/NSApplication+additions.m (-applicationNameForScripting):
    Fix typo in method name.

    * Source/NSApplication+additions.m (-_createDefaultScriptingEnvironment):
    Fix to no longer use methods which were removed when adding STConversation.

    * Source/STApplicationScriptingController.m (-executeScript:,
    -executeScriptString:inEnvironment:): Update for changes when
    STLanguage was removed and STContext was introduced.

    * Source/STApplicationScriptingController.h (-executeScript:):
    * Source/STApplicationScriptingController.m (-executeScript:): The
    method expects an STFileScript.

    * Source/STScriptsPanel.h (-selectedScript):